    Fixed: Invalid regexes for SQL user/password (Package::PhpMyAdmin::Installer)
    Fixed: libmariadbclient18 package not provided in Debian Stretch (testing) repository
    Fixed: /etc/mailname file not updated when reconfiguring system hostname
    Fixed: Ignore SIGNINT to prevent user aborting installer in wrong way
    Fixed: Plugin setup listeners are no longer registered (regression fix)
    Fixed: SQL user and password not correctly escaped in imscp.cnf file (Servers::sqld::mysql::installer)
    Moved: Master administrator questions and setup routines into Package::FrontEnd::Installer
    Renamed: imscp-setup script to imscp-reconfigure
    Transitional: Enforce PHP5 variant under Debian Stretch (testing) and Ubuntu 16.04 (Xenial Xerus)

PACKAGES
    Fixed: ERR_INCOMPLETE_CHUNKED_ENCODING error due to wrong permissions on nginx fastcgi cache directory (FrontEnd)
    Fixed: White page due to 'net::ERR_INCOMPLETE_CHUNKED_ENCODING' errors (related to #IP-1530) (PhpMyAdmin)
    Updated: PhpMyAdmin version to 4.6.0 - Only for servers with PHP/MySQL >= 5.5 (Package::PhpMyAdmin::Installer)

PLUGINS
    Fixed: Plugin configuration not synced when triggering plugin list update (when a plugin is in error state)
    Fixed: The 'change' action must be automatically triggered on plugin list update, even for plugins with error state
    Fixed: Wrong events triggered when a plugin is being locked/unlocked
    Updated: API version to 1.0.4

SERVERS
    Added: i-MSCP own logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)
    Added: i-MSCP own sysvinit script for ProFTPD - solve #IP-1402
    Changed: setenvif module is now always required ((Httpd servers)
    Fixed: AH01265: attempt to invoke directory as script: /var/www/virtual/<domain.tld>/cgi-bin/
    Fixed: Bad regexp in getTraffic() method leading to unmatching of traffic data (VsFTPd)