@@ -70,18 +70,18 @@
         </bind>
         <external_server/>
     </named>
-    <sql default="mysql_5.6">
-        <mysql_5.6
-                pinning_package="libmysqlclient18 mysql-client-5.6 mysql-common mysql-server-5.6"
+    <sql default="mysql_5.7">
+        <mysql_5.7
+                pinning_package="libmysqlclient20 mysql-client-5.7 mysql-common mysql-server-5.7"
                 pinning_pin="release o=Ubuntu,n=xenial"
                 pinning_pin_priority="1001"
                 allow_switch="remote_server"
                 >
-            <package>libmysqlclient18</package>
-            <package>mysql-client-5.6</package>
+            <package>libmysqlclient20</package>
+            <package>mysql-client-5.7</package>
             <package>mysql-common</package>
-            <package>mysql-server-5.6</package>
-        </mysql_5.6>
+            <package>mysql-server-5.7</package>
+        </mysql_5.7>
         <mariadb_10.0
                 pinning_package="libmysqlclient18 mariadb-client-10.0 mariadb-common mariadb-server-10.0 mysql-common"
                 pinning_pin="release o=Ubuntu,n=xenial"
