@@ -87,6 +87,7 @@ INSTALLER
     Fixed: libmariadbclient18 package not provided in Debian Stretch (testing) repository
     Fixed: /etc/mailname file not updated when reconfiguring system hostname
     Fixed: Ignore SIGNINT to prevent user aborting installer in wrong way
+    Fixed: MySQL server 5.6 no longer available for Ubuntu 16.04 (replaced by MySQL server 5.7)
     Fixed: Plugin setup listeners are no longer registered (regression fix)
     Fixed: SQL user and password not correctly escaped in imscp.cnf file (Servers::sqld::mysql::installer)
     Moved: Master administrator questions and setup routines into Package::FrontEnd::Installer
